fix install behavior when very old 2sxc v14 or older is installed

--- a/Src/Dnn/ToSic.Sxc.Dnn/ToSic.Sxc.Dnn.csproj
+++ b/Src/Dnn/ToSic.Sxc.Dnn/ToSic.Sxc.Dnn.csproj
@@ -132,6 +132,7 @@
     </Content>
     <Content Include="ClientScripts\readme.md" />
     <Content Include="DnnPackageBuilder\SqlDataProvider\Migrate.SqlDataProvider" />
+    <Content Include="DnnPackageBuilder\SqlDataProvider\Require20.SqlDataProvider" />
     <Content Include="DnnPackageBuilder\ToSic.Sxc.Dnn.dnn">
       <SubType>Designer</SubType>
     </Content>
