Sxc.Razor (Oqtane) almost completely nullable

--- a/Src/Razor/ToSic.Sxc.Razor/ToSic.Sxc.Razor.csproj
+++ b/Src/Razor/ToSic.Sxc.Razor/ToSic.Sxc.Razor.csproj
@@ -6,6 +6,10 @@
 
   <Import Project="../../SharedImports/CsProj.Props/CreateXDocsOnRelease.props" />
 
+  <PropertyGroup>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
   <!-- Note: not sure what this is for... -->
   <PropertyGroup>
     <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
