--- a/Src/Oqtane/ToSic.Sxc.Oqt.Shared/ToSic.Sxc.Oqt.Shared.csproj
+++ b/Src/Oqtane/ToSic.Sxc.Oqt.Shared/ToSic.Sxc.Oqt.Shared.csproj
@@ -7,6 +7,10 @@
   <Import Project="../../SharedImports/CsProj.Props/Reference/RazorBlade.props" />
 
   <PropertyGroup>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <AssemblyName>ToSic.Sxc.Oqtane.Shared</AssemblyName>
   </PropertyGroup>
 
