Oqt.Shared nullable

--- a/Src/Oqtane/ToSic.Sxc.Oqt.Shared/ToSic.Sxc.Oqt.Shared.csproj
+++ b/Src/Oqtane/ToSic.Sxc.Oqt.Shared/ToSic.Sxc.Oqt.Shared.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <RootNamespace>ToSic.Sxc.Oqt.Shared</RootNamespace>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <AssemblyName>ToSic.Sxc.Oqtane.Shared</AssemblyName>
   </PropertyGroup>
 
