Oqt.Client nullable

--- a/Src/Oqtane/ToSic.Sxc.Oqt.Client/ToSic.Sxc.Oqt.Client.csproj
+++ b/Src/Oqtane/ToSic.Sxc.Oqt.Client/ToSic.Sxc.Oqt.Client.csproj
@@ -2,6 +2,10 @@
 
   <Import Project="../../SharedImports/CsProj.Props/AllImportsForRealCode-NetCore.props" />
 
+  
+  <PropertyGroup>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 
   <PropertyGroup>
     <RootNamespace>ToSic.Sxc.Oqt.Client</RootNamespace>
