all image / wysiwyg tests now working

--- a/Src/Sxc/ToSic.Sxc.Various.SystemTests/ToSic.Sxc.Various.SystemTests.csproj
+++ b/Src/Sxc/ToSic.Sxc.Various.SystemTests/ToSic.Sxc.Various.SystemTests.csproj
@@ -4,6 +4,10 @@
 
   <Import Project="../../SharedImports/CsProj.Props/Reference/RazorBlade.props" />
 
+  <PropertyGroup>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.DataSource.TestHelpers\ToSic.Eav.DataSource.TestHelpers.csproj" />
     <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.Testing.FullDbFixtures\ToSic.Eav.Testing.FullDbFixtures.csproj" />
