fix issue with edition button dissapearing #3475

--- a/Src/Sxc/ToSic.Sxc.Engines/ToSic.Sxc.Engines.csproj
+++ b/Src/Sxc/ToSic.Sxc.Engines/ToSic.Sxc.Engines.csproj
@@ -2,6 +2,9 @@
 
   <Import Project="../../SharedImports/CsProj.Props/AllImportsForRealCode-Nullable.props" />
 
+  <!-- Just used for string Before() etc. -->
+  <Import Project="../../SharedImports/CsProj.Props/Reference/RazorBlade.props" />
+
   <PropertyGroup>
     <AssemblyName>ToSic.Sxc.Engines</AssemblyName>
   </PropertyGroup>
