--- a/Src/Razor/ToSic.Sxc.Razor/ToSic.Sxc.Razor.csproj
+++ b/Src/Razor/ToSic.Sxc.Razor/ToSic.Sxc.Razor.csproj
@@ -20,7 +20,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.5" /><!-- from ToSic.Sxc.Oqt.Server.csproj  (affects Oqtane only) -->
+    <!-- Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation transitive dependecy, but force updated to latest version  (affects Oqtane only) -->
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.Extensions" Version="6.0.36" />
+    <!-- Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation transitive dependecy, but force updated to latest version  (affects Oqtane only) -->
+    <PackageReference Include="Microsoft.CodeAnalysis.Razor" Version="6.0.36" />
+    <!-- Microsoft.CodeAnalysis.Razor transitive dependecy, but force updated to latest version (affects Oqtane only) -->
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
   </ItemGroup>
 
   <ItemGroup>
