--- a/Src/Oqtane/ToSic.Sxc.Oqt.Server/ToSic.Sxc.Oqt.Server.csproj
+++ b/Src/Oqtane/ToSic.Sxc.Oqt.Server/ToSic.Sxc.Oqt.Server.csproj
@@ -71,6 +71,7 @@
   <ItemGroup>
     <!-- stv - SQL scripts have to be included as embedded resources -->
     <!-- to be executed as part of oqtane installation or upgrade procedure -->
+    <EmbeddedResource Include="Scripts\ToSic.Sxc.20.00.06.sql" />
     <EmbeddedResource Include="Scripts\ToSic.Sxc.12.00.00.sql" />
     <EmbeddedResource Include="Scripts\ToSic.Sxc.12.05.00.sql" />
     <EmbeddedResource Include="Scripts\ToSic.Sxc.13.00.00.sql" />
