Create Extensions backend

--- a/Src/Sxc/ToSic.Sxc.WebApi.Tests/ToSic.Sxc.WebApi.Tests.csproj
+++ b/Src/Sxc/ToSic.Sxc.WebApi.Tests/ToSic.Sxc.WebApi.Tests.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AdamTests\" />
+    <ProjectReference Include="..\ToSic.Sxc.WebApi\ToSic.Sxc.WebApi.csproj" />
   </ItemGroup>
 
 </Project>
