--- a/Src/Oqtane/ToSic.Sxc.Oqt.Server.Tests/ToSic.Sxc.Oqt.Server.Tests.csproj
+++ b/Src/Oqtane/ToSic.Sxc.Oqt.Server.Tests/ToSic.Sxc.Oqt.Server.Tests.csproj
@@ -17,6 +17,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Oqtane.Server" Version="6.1.3" />
+    <PackageReference Include="Oqtane.Shared" Version="6.1.3" />
   </ItemGroup>
 
   <ItemGroup>
