Create endpoint to install extension zip

--- a/Src/Sxc/ToSic.Sxc.WebApi.Tests/ToSic.Sxc.WebApi.Tests.csproj
+++ b/Src/Sxc/ToSic.Sxc.WebApi.Tests/ToSic.Sxc.WebApi.Tests.csproj
@@ -11,4 +11,9 @@
     <ProjectReference Include="..\ToSic.Sxc.WebApi\ToSic.Sxc.WebApi.csproj" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+	  <Reference Include="System.IO.Compression" />
+	  <Reference Include="System.IO.Compression.FileSystem" />
+  </ItemGroup>
+
 </Project>
