--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,17 @@
   },
   "cSpell.words": [
     "Oqtane"
-  ]
+  ],
+  "sarif-viewer.connectToGithubCodeScanning": "off",
+  "chat.promptFilesRecommendations": {
+    "speckit.constitution": true,
+    "speckit.specify": true,
+    "speckit.plan": true,
+    "speckit.tasks": true,
+    "speckit.implement": true
+  },
+  "chat.tools.terminal.autoApprove": {
+    ".specify/scripts/bash/": true,
+    ".specify/scripts/powershell/": true
+  }
 }
