--- a/Src/Oqtane/ToSic.Sxc.Oqt.Server/ToSic.Sxc.Oqt.Server.csproj
+++ b/Src/Oqtane/ToSic.Sxc.Oqt.Server/ToSic.Sxc.Oqt.Server.csproj
@@ -86,18 +86,21 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.5" /><!-- from Oqtane.Server.csproj -->
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.5" /><!-- from Oqtane.Server.csproj -->
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" /><!-- from Oqtane.Server.csproj -->
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.0" /><!-- from Oqtane.Server.csproj -->
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0" /><!-- from Oqtane.Server.csproj -->
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="10.0.0" /><!-- from Oqtane.Server.csproj -->
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" /><!-- from Oqtane.Server.csproj -->
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" /><!-- from Oqtane.Database.SqlServer.csproj -->
-    <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.5" /><!-- from Oqtane.Server.csproj -->
-    <PackageReference Include="Oqtane.Client" Version="6.1.3" />
-    <PackageReference Include="Oqtane.Server" Version="6.1.3" />
-    <PackageReference Include="Oqtane.Shared" Version="6.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" /><!-- from Oqtane.Server.csproj -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" /><!-- from Oqtane.Database.SqlServer.csproj -->
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="10.0.0" /><!-- from Oqtane.Server.csproj -->
+    <PackageReference Include="Oqtane.Client" Version="10.0.0" />
+    <PackageReference Include="Oqtane.Server" Version="10.0.0" />
+    <PackageReference Include="Oqtane.Shared" Version="10.0.0" />
     <PackageReference Include="ToSic.Imageflow.Oqtane" Version="1.12.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0-rc.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
