--- a/Src/Sxc/ToSic.Sxc.WebApi/ToSic.Sxc.WebApi.csproj
+++ b/Src/Sxc/ToSic.Sxc.WebApi/ToSic.Sxc.WebApi.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.Apps\ToSic.Eav.Apps.csproj" />
+    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.Apps.Persistence\ToSic.Eav.Apps.Persistence.csproj" />
     <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.Insights\ToSic.Eav.Insights.csproj" />
     <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.WebApi\ToSic.Eav.WebApi.csproj" />
     <ProjectReference Include="..\..\..\..\eav-server\ToSic.Sys.Core\ToSic.Sys.Core.csproj" />
